ARTEMIS-4401 improving JDBC Performance with Paging by a significant factor