@@ -32,7 +32,7 @@ public class JDBCDataSourceUtils {
          .map(key -> key + "=" + (key.equalsIgnoreCase("password") ? "****" : dataSourceProperties.get(key)))
          .collect(Collectors.joining(", ", "{", "}")));
       try {
-         DataSource dataSource = (DataSource) Class.forName(dataSourceClassName).newInstance();
+         DataSource dataSource = (DataSource) Class.forName(dataSourceClassName).getDeclaredConstructor().newInstance();
          for (Map.Entry<String, Object> entry : dataSourceProperties.entrySet()) {
             PropertyUtils.setProperty(dataSource, entry.getKey(), entry.getValue());
          }
